# cobaya_cosmosis_interface

./: README.md  pyproject.toml
src/cosmosis_cobaya_interface/: cosmosis_wrapper.py  prepare_config.py
